Fix template items vertical alignment by adding align-self: start

--- a/packages/ketcher-react/src/script/ui/dialog/template/TemplateTable.module.less
+++ b/packages/ketcher-react/src/script/ui/dialog/template/TemplateTable.module.less
@@ -80,6 +80,7 @@
   padding: 0;
   font: inherit;
   text-align: inherit;
+  align-self: start;
 
   &.selected .struct {
     background-color: fade(@color-primary, 5%);
